# raspimidihub

./: .gitignore  AGENTS.md  CHANGELOG.md  CHANGELOG.txt  CHANGELOG_EXTENSIVE.txt  CLAUDE.md  LICENSE  Makefile  PLAN.md  PROMPT.txt  README.md  masquerade.sh  pyproject.toml  pytest.ini  ruff.toml
PLAN-MIDI2.0/: FSD-01-kernel-and-os-enablement.md  FSD-02-alsa-ump-binding.md  FSD-03-engine-ump-integration.md  FSD-04-capability-surfacing-ui.md  FSD-05-monitor-and-sse-hires.md  FSD-06-scaling-library.md  FSD-07-filters-mappings-hires.md  FSD-08-plugin-params-hires.md  FSD-09-generators-controllers-hires.md  FSD-10-midi-ci.md  FSD-11-transports-and-gadget.md  README.md  build-ump-modules.sh  kernel-build-notes.md  upstream-config-request.md
PLAN-MIDI2.0/research/: 01-midi2-protocol.md  02-linux-alsa-ump.md  03-codebase-impact-map.md
debian/: changelog  control  copyright  postinst  postrm  raspimidihub.install
docs/: BLE_MIDI_BRIDGE_PLAN.md  BLUETOOTH.md  BUILDING.md  CHANGELOG.md  CONTRIBUTING.md  DEV-MODE.md  FSD.md  IMPLEMENTATION_PLAN.md  ROADMAP.md  UI-INTERNALS.md  UI_GUIDE.md  cc-binding.md  eucledian.md
docs/manual/: 00-frontmatter.md  01-introduction.md  02-hardware-and-connectors.md  02-the-raspimidihub.md  03-hardware-and-connectors.md  03-interacting-with-the-web-ui.md  04-quick-start.md  04-system-architecture.md  05-configuration-and-data-structure.md  05-routing-matrix.md  06-filters-and-mappings.md  06-interacting-with-the-web-ui.md  07-plugins.md  07-quick-start.md  08-controllers.md  08-ui-controls.md  09-play-surfaces.md  09-routing-matrix.md  10-bluetooth-midi.md  10-filters-and-mappings.md  11-plugins.md  11-saving-and-exporting-configs.md  12-controllers.md  (+24 more)
image/: README.md  apply-wifi-country  bootstrap-run  build.sh  firstboot-led  os-list.json  raspimidihub-apply-wifi-country.service  raspimidihub-bootstrap.service
plugins/: README.md  conftest.py
rosetup/: setup.sh  undo.sh
scripts/: fake_midi2_synth.py  install.sh  raspimidihub-bt-state.sh  raspimidihub-install-deb.sh  raspimidihub-system-prepare.sh  raspimidihub-system-revert.sh  raspimidihub-update-watchdog.sh  raspimidihub-update.sh  reset-wifi.sh
systemd/: bluetooth-no-midi.conf  raspimidihub-bt-state.service  raspimidihub-hostapd.service  raspimidihub.service
tests/: conftest.py  helpers.py  test_apple_midi.py  test_ble_midi.py  test_cartesian.py  test_cc_binding.py  test_channel_selector.py  test_clock_bus.py  test_clock_feedback.py  test_config_backups.py  test_config_legacy_presets.py  test_cpu_affinity.py  test_device_id.py  test_drop_buttons.py  test_edge_diff.py  test_filter_pipeline.py  test_hires_adoptions.py  test_hires_send.py  test_mapping_validation.py  test_midi_ci.py  test_midi_codec.py  test_midi_filter.py  test_midi_scale.py  test_network_midi.py  test_panic.py  test_perf_stats.py  test_tidy_param_values.py  test_tracker_base.py  test_ump_cc_binding.py  test_ump_codec.py  test_ump_device_model.py  test_ump_filter_path.py  test_ump_monitor_shim.py  test_ump_probe.py  test_update_flow.py  test_usb_tether.py  test_wifi.py  test_xypad_spring.py
udev/: 90-raspimidihub.rules
website/: _preview.html  index.html  style.css
(+220 files in other folders)
