[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "raspimidihub"
version = "1.1.4"
description = "Automatic USB MIDI hub for Raspberry Pi"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = []

[project.scripts]
raspimidihub = "raspimidihub.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
