[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "raspimidihub"
version = "3.0.0a"
description = "Automatic USB MIDI hub for Raspberry Pi"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
test = ["pytest>=7.0", "pytest-asyncio>=0.21"]
dev = ["ruff>=0.5"]
# Documentation screenshots — `make screenshots` walks the running
# Pi UI in headless Chromium and writes PNGs into docs/screenshots/.
# Not in `dev` because it pulls a chunky browser binary that nobody
# needs unless they're regenerating the docs.
screenshots = ["playwright>=1.40"]

[project.scripts]
raspimidihub = "raspimidihub.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests", "plugins"]
asyncio_mode = "auto"
markers = [
    "alsa: requires ALSA (snd-virmidi or real hardware)",
    "e2e: end-to-end UI tests requiring Playwright",
    "slow: tests that take >5s",
]

[tool.ruff]
line-length = 100
target-version = "py39"
extend-exclude = [".venv", "build", "dist"]

[tool.ruff.lint]
# E/W = pycodestyle, F = pyflakes, I = isort, UP = pyupgrade,
# B = flake8-bugbear, SIM = flake8-simplify
select = ["E", "W", "F", "I", "UP", "B", "SIM"]
ignore = [
    "E501",   # long lines — formatter handles this
    "E741",   # ambiguous variable name (we use `l`/`I` in MIDI maths)
    "B008",   # function call in default arg (intentional in dataclasses)
    "SIM102", # collapsible if (sometimes clearer with two)
    "SIM103", # needless bool (early-return form is fine)
    "SIM105", # try/except/pass — contextlib.suppress is noisier here
    "SIM108", # ternary-instead-of-if (often less readable here)
    "E731",   # lambda-assignment (one-liner lambdas are fine)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
